# RoadCode

./: .gitignore  BLACKROAD-STORY.md  CONNECTOR.md  Dockerfile  GREENLIGHT_EMOJI_DICTIONARY.md  Makefile  README.md  ROADMAP.md  TODO.md  community.jsonl  docker-compose.yml  justice.jsonl  knowledge.jsonl  morals.jsonl  package-lock.json  package.json  pyproject.toml  tsconfig.json  values.jsonl
.github/workflows/: agent-org-health.yml  agent-repo-improver.yml  agent-workflow-sync.yml  autonomous-cross-repo.yml  autonomous-dependency-manager.yml  autonomous-issue-manager.yml  autonomous-orchestrator.yml  autonomous-self-healer.yml  connector-discord.yml  connector-email.yml  connector-linear.yml  connector-notion.yml  connector-slack.yml  connector-stripe.yml  github-pages.yml  roadcode-pages.yml
agents/: README.md  __init__.py  base.py
agents/alexandria/: agent.py
agents/alice/: agent.py
agents/anastasia/: agent.py
agents/aria/: agent.py
agents/cadence/: agent.py
agents/cece/: __init__.py  agent.py
agents/cecilia/: agent.py
agents/gaia/: agent.py
agents/gematria/: agent.py
api/: README.md  __init__.py
cli/: README.md
config/: README.md
core/: README.md  __init__.py  registry.py  state.py
data/: .gitkeep  README.md
docs/: BLACKROAD-SYSTEM-PROMPT.md  DESIGN-RULES.md  README.md
infrastructure/: README.md
models/: README.md  __init__.py
nodes/: README.md
org/: README.md
runtime/: README.md
scripts/: README.md
services/: README.md  __init__.py
site/: index.html  styles.css
system/: __init__.py
tests/: conftest.py
(+104 files in other folders)
