[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roadcode"
version = "1.0.0"
description = "BlackRoad RoadCode Python modules"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
ai = ["ollama>=0.1.0", "sentence-transformers>=2.2.0", "numpy>=1.24.0"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0", "mypy>=1.7.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
